--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -5,38 +5,41 @@
    "id": "2ab6d46f",
    "metadata": {},
    "source": [
-    "## 📌Minimum in Rotated Sorted "
+    "## 📌🔖 Minimum in Rotated Sorted With Distict Elements (LC-153)\n",
+    "- We binary search on the rotated sorted array.\n",
+    "- If nums[mid] > nums[right], the minimum must be in the right half.\n",
+    "- Otherwise, the minimum is in the left half.\n",
+    "- When the loop ends, left == right, pointing to the minimum element."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "febfc648",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def minRotatedSorted(arr):\n",
-    "    '''Modified Binary Search'''\n",
-    "    low_index = 0\n",
-    "    high_index = len(arr) - 1\n",
+    "class Solution:\n",
+    "    def findMin(self, nums: List[int]) -> int:\n",
+    "        # Initialize the two pointers \n",
+    "        left = 0\n",
+    "        right = len(nums) - 1\n",
     "\n",
-    "    while low_index < high_index:\n",
-    "        low_value = arr[low_index]\n",
+    "        # Start the loop \n",
+    "        while left < right:\n",
+    "            # Calculate the mid \n",
+    "            mid = (left + right) // 2\n",
     "\n",
-    "        mid_index = low_index + high_index // 2\n",
+    "            # Check which side mid lies in wrt right pointer\n",
+    "            # Mid lies on right side of minimum \n",
+    "            if nums[mid] > nums[right]:\n",
+    "                # Shift the left pointer \n",
+    "                left = mid + 1\n",
     "\n",
-    "        if arr[mid_index] > arr[high_index]:\n",
-    "            low_index = mid_index + 1\n",
+    "            else:\n",
+    "                right = mid\n",
     "        \n",
-    "        else:\n",
-    "            high_index = mid_index\n",
-    "        \n",
-    "    \n",
-    "    return arr[low_index]\n",
-    "\n",
-    "\n",
-    "minRotatedSorted([5, 6, 1, 2, 3, 4])\n",
-    "        \n"
+    "        return nums[left]"
    ]
   },
   {
@@ -708,7 +711,7 @@
    "id": "e114cb76",
    "metadata": {},
    "source": [
-    "## 📌 🔖 Subarray Sums Divisible by K (LC-974)"
+    "## 📌🔖 Subarray Sums Divisible by K (LC-974)"
    ]
   },
   {
@@ -716,18 +719,7 @@
    "execution_count": null,
    "id": "2bc793d7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Solution:\n",
     "    def subarraysDivByK(self, nums: List[int], k: int) -> int:\n",
@@ -759,12 +751,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d7cca3f5",
+   "metadata": {},
+   "source": [
+    "## 📌🔖 Subarray Sum Equals K (LC-560)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "ebcc63b9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def subarraySum(self, nums: List[int], k: int) -> int:\n",
+    "        # Initiate the variables\n",
+    "        current_sum = 0\n",
+    "        count = 0\n",
+    "        sum_mapping = {0 : 1}        \n",
+    "\n",
+    "        # Start looping over the array\n",
+    "        for num in nums:\n",
+    "            # Calculate the current sum \n",
+    "            current_sum += num\n",
+    "\n",
+    "            # Check if difference exists \n",
+    "            if (current_sum - k) in sum_mapping:\n",
+    "                # Increment the counter\n",
+    "                count += sum_mapping[current_sum - k]\n",
+    "\n",
+    "                # Increment the mapping \n",
+    "                sum_mapping[current_sum - k] += 1\n",
+    "\n",
+    "            else:\n",
+    "                # Add it to mapping\n",
+    "                sum_mapping[current_sum] = 1\n",
+    "\n",
+    "        return count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bdd360c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "class Solution:\n",
+    "    def subarraySum(self, nums: list[int], k: int) -> int:\n",
+    "        # A dictionary to store the count of each prefix sum\n",
+    "        # defaultdict(int) is convenient as it initializes new keys with a value of 0\n",
+    "        prefix_sum_counts = defaultdict(int)\n",
+    "        \n",
+    "        # Initialize the map with {0: 1} to handle subarrays starting from index 0\n",
+    "        prefix_sum_counts[0] = 1\n",
+    "        \n",
+    "        current_sum = 0\n",
+    "        count = 0\n",
+    "        \n",
+    "        for num in nums:\n",
+    "            # Update the current prefix sum\n",
+    "            current_sum += num\n",
+    "            \n",
+    "            # The target prefix sum is current_sum - k\n",
+    "            target_sum = current_sum - k\n",
+    "            \n",
+    "            # If the target_sum exists in the map, add its count to the total\n",
+    "            if target_sum in prefix_sum_counts:\n",
+    "                count += prefix_sum_counts[target_sum]\n",
+    "            \n",
+    "            # Update the count of the current prefix sum in the map\n",
+    "            prefix_sum_counts[current_sum] += 1\n",
+    "            \n",
+    "        return count"
+   ]
   }
  ],
  "metadata": {
