--- a/revision.ipynb
+++ b/revision.ipynb
@@ -203,10 +203,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b06cc669",
+   "id": "553f330d",
    "metadata": {},
    "source": [
-    "### 2 Sum"
+    "## Minimum in Rotated Sorted (LC-153)"
    ]
   },
   {
@@ -215,7 +215,29 @@
    "id": "649adcfb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def findMin(self, nums: List[int]) -> int:\n",
+    "        # Initialize the two pointers \n",
+    "        left = 0\n",
+    "        right = len(nums) - 1\n",
+    "\n",
+    "        # Start the loop \n",
+    "        while left < right:\n",
+    "            # Calculate the mid \n",
+    "            mid = (left + right) // 2\n",
+    "\n",
+    "            # Check which side mid lies in wrt right pointer\n",
+    "            # Mid lies on right side of minimum \n",
+    "            if nums[mid] > nums[right]:\n",
+    "                # Shift the left pointer \n",
+    "                left = mid + 1\n",
+    "\n",
+    "            else:\n",
+    "                right = mid\n",
+    "        \n",
+    "        return nums[left]\n"
+   ]
   },
   {
    "cell_type": "code",
