search in sorted array- revision

--- a/revision.ipynb
+++ b/revision.ipynb
@@ -240,12 +240,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "af583b56",
+   "metadata": {},
+   "source": [
+    "## Search in Rotated Sorted (LC-33)\n",
+    "\n",
+    "==============================================\n",
+    "#### Learning\n",
+    "- In case of searching for sorted side, apply target conditions on both sides, assuming either side can be sorted \n",
+    "\n",
+    "==============================================\n",
+    "\n",
+    "#### Mistakes\n",
+    "- Used left < right instead of left <= right\n",
+    "\n",
+    "===============================================\n",
+    "\n",
+    "#### The core idea\n",
+    "- while left <= right:\n",
+    "    - You are treating both left and right as valid candidates for the answer.\n",
+    "→ This is the \"inclusive\" interval [left, right].\n",
+    "\n",
+    "- while left < right:\n",
+    "    - You are treating the interval as half-open, meaning [left, right).\n",
+    "    - In this case, right is not always checked directly, so you must handle it carefully."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "244e3321",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def search(self, nums: List[int], target: int) -> int:\n",
+    "        # Initialise the pointers \n",
+    "        left = 0\n",
+    "        right = len(nums) - 1\n",
+    "\n",
+    "        # Start the loop\n",
+    "        while left <= right:\n",
+    "            # Calculate the mid \n",
+    "            mid = (left + right) // 2\n",
+    "\n",
+    "            # Check if mid has the answer\n",
+    "            if nums[mid] == target:\n",
+    "                return mid\n",
+    "\n",
+    "            # Check which side of mid is sorted \n",
+    "            # Left side sorted \n",
+    "            if nums[mid] >= nums[left]:\n",
+    "                # If target lies in between\n",
+    "                if nums[left] <= target < nums[mid]:\n",
+    "                    right = mid - 1\n",
+    "\n",
+    "                else:\n",
+    "                    left = mid + 1\n",
+    "\n",
+    "            # Right side sorted \n",
+    "            else:\n",
+    "                # Target lies in between\n",
+    "                if nums[mid] < target <= nums[right]:\n",
+    "                    left = mid + 1\n",
+    "                \n",
+    "                else:\n",
+    "                    right = mid - 1\n",
+    "        \n",
+    "        return -1"
+   ]
   }
  ],
  "metadata": {
