--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -5,7 +5,7 @@
    "id": "2ab6d46f",
    "metadata": {},
    "source": [
-    "## 📌🔖 Minimum in Rotated Sorted With Distict Elements (LC-153)\n",
+    "## 📌🔖 Rotated Sorted\n",
     "- We binary search on the rotated sorted array.\n",
     "- If nums[mid] > nums[right], the minimum must be in the right half.\n",
     "- Otherwise, the minimum is in the left half.\n",
@@ -13,9 +13,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "655820ef",
+   "metadata": {},
+   "source": [
+    "### 1. Minimum in rotated sorted with Distict Elements (LC-153)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "febfc648",
+   "execution_count": 67,
+   "id": "34f01150",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,106 +52,53 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eedd7644",
-   "metadata": {},
-   "source": [
-    "## 📌Rotated Sorted"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "655820ef",
-   "metadata": {},
-   "source": [
-    "### 1. Find minimum in rotated sorted"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34f01150",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def searchRotatedSorted(arr, key):\n",
-    "    low_index = 0\n",
-    "    high_index = len(arr) - 1\n",
-    "\n",
-    "    while low_index <= high_index:\n",
-    "        # Calculate middle\n",
-    "        mid_index = (low_index + high_index) // 2\n",
-    "\n",
-    "        # Check for values \n",
-    "        if arr[mid_index] == key:\n",
-    "            return mid_index\n",
-    "        \n",
-    "        # When key is less than middle value\n",
-    "        elif key <= arr[mid_index]:\n",
-    "            # Case 1\n",
-    "            if key >= arr[low_index]:\n",
-    "                high_index = mid_index\n",
-    "            \n",
-    "            elif key < arr[low_index]:\n",
-    "                low_index = mid_index + 1\n",
-    "\n",
-    "        # When key is more than middle\n",
-    "        elif key > arr[mid_index]:\n",
-    "            # Case\n",
-    "            low_index = (mid_index + 1)\n",
-    "    \n",
-    "    return -1\n",
-    "\n",
-    "searchRotatedSorted([4,5,6,7,0,1,2], 0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "2fea38da",
    "metadata": {},
    "source": [
-    "### 2. Search in rotated sorted (with distinct integers)"
+    "### 2. Search in rotated sorted with Distinct Integers (LC-33)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "157a4920",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
     "    def search(self, nums: List[int], target: int) -> int:\n",
-    "        # define left and right indexes\n",
+    "        # Initialise the pointers \n",
     "        left = 0\n",
-    "        right = len(nums) -1\n",
-    "        \n",
-    "        # start the loop\n",
+    "        right = len(nums) - 1\n",
+    "\n",
+    "        # Start the loop\n",
     "        while left <= right:\n",
-    "            # calculate mid value and match with target \n",
+    "            # Calculate the mid \n",
     "            mid = (left + right) // 2\n",
-    "            \n",
+    "\n",
+    "            # Check if mid has the answer\n",
     "            if nums[mid] == target:\n",
     "                return mid\n",
-    "            \n",
-    "            # check which side of mid is sorted \n",
-    "            # left sorted\n",
-    "            elif nums[left] <= nums[mid]:\n",
-    "                # check which side of mid target lies \n",
+    "\n",
+    "            # Check which side of mid is sorted \n",
+    "            # Left side sorted \n",
+    "            if nums[mid] >= nums[left]:\n",
+    "                # If target lies in between\n",
     "                if nums[left] <= target < nums[mid]:\n",
-    "                    right = (mid - 1)\n",
+    "                    right = mid - 1\n",
     "\n",
     "                else:\n",
-    "                    left = (mid + 1)\n",
+    "                    left = mid + 1\n",
     "\n",
-    "            # right sorted \n",
+    "            # Right side sorted \n",
     "            else:\n",
-    "                # check which side of mid target lies \n",
+    "                # Target lies in between\n",
     "                if nums[mid] < target <= nums[right]:\n",
-    "                    left = (mid + 1)\n",
+    "                    left = mid + 1\n",
     "                \n",
     "                else:\n",
-    "                    right = (mid - 1)\n",
-    "            \n",
+    "                    right = mid - 1\n",
+    "        \n",
     "        return -1"
    ]
   },
@@ -152,7 +107,7 @@
    "id": "8ca6faef",
    "metadata": {},
    "source": [
-    "### 3. Search in rotated sorted (with non distinct integers)"
+    "### 3. Search in rotated sorted with Non Distinct Integers"
    ]
   },
   {
