--- a/revision.ipynb
+++ b/revision.ipynb
@@ -5,7 +5,7 @@
    "id": "d37fac10",
    "metadata": {},
    "source": [
-    "### Search Index in Rotated Sorted\n",
+    "### 📌🔖 Search Index in Rotated Sorted\n",
     "\n",
     "Idea:\n",
     "- Search which side is sorted \n",
@@ -86,7 +86,7 @@
    "id": "846aeea2",
    "metadata": {},
    "source": [
-    "### Majority Elements (Boyer-Moore Voting)\n",
+    "### 📌🔖 Majority Elements (Boyer-Moore Voting)\n",
     "\n",
     "Idea:\n",
     "- Use count and tracker to find a candidate for the majority element\n",
@@ -141,7 +141,7 @@
    "id": "f46b3584",
    "metadata": {},
    "source": [
-    "### Majority Elements II (Extended Boyer's Moore Voting Algorithm)"
+    "### 📌🔖 Majority Elements II (Extended Boyer's Moore Voting Algorithm)"
    ]
   },
   {
@@ -206,7 +206,7 @@
    "id": "553f330d",
    "metadata": {},
    "source": [
-    "## Minimum in Rotated Sorted (LC-153)"
+    "## 📌🔖 Minimum in Rotated Sorted (LC-153)"
    ]
   },
   {
@@ -244,7 +244,7 @@
    "id": "af583b56",
    "metadata": {},
    "source": [
-    "## Search in Rotated Sorted (LC-33)\n",
+    "## 📌🔖 Search in Rotated Sorted With Distince Elements (LC-33)\n",
     "\n",
     "==============================================\n",
     "#### Learning\n",
@@ -260,11 +260,12 @@
     "#### The core idea\n",
     "- while left <= right:\n",
     "    - You are treating both left and right as valid candidates for the answer.\n",
-    "→ This is the \"inclusive\" interval [left, right].\n",
+    "    - This is the \"inclusive\" interval [left, right].\n",
     "\n",
     "- while left < right:\n",
     "    - You are treating the interval as half-open, meaning [left, right).\n",
-    "    - In this case, right is not always checked directly, so you must handle it carefully."
+    "    - In this case, right is not always checked directly, so you must handle it carefully.\n",
+    "    - Generally used for searching the minimum value in rotated sorted, where left side will be answer, so don't need to check right side "
    ]
   },
   {
