--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -441,7 +441,7 @@
    "id": "2f98775f",
    "metadata": {},
    "source": [
-    "## 📌 🔖 Longest Substring Without Repearing Character (LT-3)\n",
+    "## 📌 🔖 Longest Substring Without Repearing Character (LC-3)\n",
     "- Non - repeating characters, think of using set() or deque()\n",
     "- Calculate result in each iterations "
    ]
