--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -715,41 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "ebcc63b9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Solution:\n",
-    "    def subarraySum(self, nums: List[int], k: int) -> int:\n",
-    "        # Initiate the variables\n",
-    "        current_sum = 0\n",
-    "        count = 0\n",
-    "        sum_mapping = {0 : 1}        \n",
-    "\n",
-    "        # Start looping over the array\n",
-    "        for num in nums:\n",
-    "            # Calculate the current sum \n",
-    "            current_sum += num\n",
-    "\n",
-    "            # Check if difference exists \n",
-    "            if (current_sum - k) in sum_mapping:\n",
-    "                # Increment the counter\n",
-    "                count += sum_mapping[current_sum - k]\n",
-    "\n",
-    "                # Increment the mapping \n",
-    "                sum_mapping[current_sum - k] += 1\n",
-    "\n",
-    "            else:\n",
-    "                # Add it to mapping\n",
-    "                sum_mapping[current_sum] = 1\n",
-    "\n",
-    "        return count"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "9bdd360c",
    "metadata": {},
    "outputs": [],
@@ -757,33 +723,37 @@
     "from collections import defaultdict\n",
     "\n",
     "class Solution:\n",
-    "    def subarraySum(self, nums: list[int], k: int) -> int:\n",
-    "        # A dictionary to store the count of each prefix sum\n",
-    "        # defaultdict(int) is convenient as it initializes new keys with a value of 0\n",
-    "        prefix_sum_counts = defaultdict(int)\n",
-    "        \n",
-    "        # Initialize the map with {0: 1} to handle subarrays starting from index 0\n",
-    "        prefix_sum_counts[0] = 1\n",
-    "        \n",
+    "    def subarraySum(self, nums: List[int], k: int) -> int:\n",
+    "        # Initialize the prefix sum dictionary \n",
+    "        prefix_sum_freq = defaultdict(int)\n",
+    "        prefix_sum_freq[0] = 1\n",
     "        current_sum = 0\n",
     "        count = 0\n",
-    "        \n",
+    "\n",
+    "        # Start the loop and calculate current sum \n",
     "        for num in nums:\n",
-    "            # Update the current prefix sum\n",
+    "            # Increment current sum with new num\n",
     "            current_sum += num\n",
-    "            \n",
-    "            # The target prefix sum is current_sum - k\n",
-    "            target_sum = current_sum - k\n",
-    "            \n",
-    "            # If the target_sum exists in the map, add its count to the total\n",
-    "            if target_sum in prefix_sum_counts:\n",
-    "                count += prefix_sum_counts[target_sum]\n",
-    "            \n",
-    "            # Update the count of the current prefix sum in the map\n",
-    "            prefix_sum_counts[current_sum] += 1\n",
-    "            \n",
+    "\n",
+    "            # Check for condition\n",
+    "            target = current_sum - k\n",
+    "            if target in prefix_sum_freq:\n",
+    "                # increment the counter\n",
+    "                count += prefix_sum_freq[target]\n",
+    "\n",
+    "            # Update the count \n",
+    "            prefix_sum_freq[current_sum] += 1\n",
+    "\n",
     "        return count"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51ab49ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
