make sum divisible by k

--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "34f01150",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "157a4920",
    "metadata": {},
    "outputs": [],
@@ -575,7 +575,7 @@
    "id": "5cc6a78e",
    "metadata": {},
    "source": [
-    "## 📌 Minimum Size Subarray Sum (LC-209)\n",
+    "## 📌 Minimum Size Subarray Sum With Positive Integers Only (LC-209)\n",
     "\n",
     "Errors\n",
     "- Do not calculate sum everytime \n",
@@ -623,7 +623,7 @@
    "id": "50988705",
    "metadata": {},
    "source": [
-    "## 📌 🔖 Maximum Size Subarray Sum Equal K (LC-325)\n",
+    "## 📌 🔖 Maximum Size Subarray Sum Equal K Wiht Both Positive and Negative Integers (LC-325)\n",
     "### 💡 Using Prefix Sum here\n",
     "### - Notes:\n",
     "- Sliding Window should not be the first preference for arrays with mix of negative and positive numbers \n",
@@ -710,12 +710,12 @@
    "id": "d7cca3f5",
    "metadata": {},
    "source": [
-    "## 📌🔖 Subarray Sum Equals K (LC-560)"
+    "## 📌🔖 Subarray Sum Equals K With Both Positive and Negative Integers (LC-560)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "9bdd360c",
    "metadata": {},
    "outputs": [],
@@ -748,9 +748,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c2751e6c",
+   "metadata": {},
+   "source": [
+    "## 📌🔖 Make Sum Divisible by P (LC-1590)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51ab49ad",
+   "id": "c84486f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def minSubarray(self, nums: List[int], p: int) -> int:\n",
+    "        # Initialize the variables and map \n",
+    "        prefix_sum_map = defaultdict(int)\n",
+    "        prefix_sum_map[0] = -1\n",
+    "        current_sum = 0\n",
+    "        target = sum(nums) % p\n",
+    "        result = len(nums) + 1\n",
+    "\n",
+    "        # If full array is divisible by p\n",
+    "        if target == 0:\n",
+    "            return 0\n",
+    "\n",
+    "        # Start a loop to add current number to total sum \n",
+    "        for i, num in enumerate(nums):\n",
+    "            # Increment the current sum \n",
+    "            current_sum += num\n",
+    "            curr_mod = current_sum % p\n",
+    "\n",
+    "            # Check for condition\n",
+    "            previous_remainder = (curr_mod - target + p) % p \n",
+    "            if previous_remainder in prefix_sum_map:\n",
+    "                # Fetch the value of key \n",
+    "                j = prefix_sum_map[previous_remainder]\n",
+    "\n",
+    "                # Compare min value \n",
+    "                result = min(result, i - j)\n",
+    "            \n",
+    "            # Store the curr_mod\n",
+    "            prefix_sum_map[curr_mod] = i\n",
+    "\n",
+    "        return result if result < len(nums) else -1\n",
+    "\n",
+    "# nums % p == target\n",
+    "# target = subarray_sum % p =  (prefix_sum[i] - prefix_sum[j]) % p , i>j \n",
+    "# (prefix_sum[i] % p - prefix_sum[j] % p + p) % p\n",
+    "# (curr_remainder - previous_remainder + p) % p\n",
+    "# previous_remainder = (curr_remainder - target + p) % p\n",
+    "\n",
+    "# prefix_sum[j] % p = (prefic_sum[i] % p) - target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1bd59da",
    "metadata": {},
    "outputs": [],
    "source": []
