revision - subarray sums divisible by k

--- a/revision.ipynb
+++ b/revision.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "244e3321",
    "metadata": {},
    "outputs": [],
@@ -310,6 +310,50 @@
     "                    right = mid - 1\n",
     "        \n",
     "        return -1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6051a8a2",
+   "metadata": {},
+   "source": [
+    "## 📌🔖 Subarray Sums Divisible by K (LC-974)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf94d9d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def subarraysDivByK(self, nums: List[int], k: int) -> int:\n",
+    "        # Initialise the variables\n",
+    "        prefix_map = defaultdict(int)\n",
+    "        prefix_map[0] = 1\n",
+    "        current_sum = 0\n",
+    "        count = 0\n",
+    "\n",
+    "        # Start the loop\n",
+    "        for num in nums:\n",
+    "            # Calculate the current sum \n",
+    "            current_sum += num\n",
+    "\n",
+    "            # Check for the condition \n",
+    "            curr_remainder = current_sum % k\n",
+    "            if curr_remainder in prefix_map:\n",
+    "                # Increment the counter \n",
+    "                count += prefix_map[curr_remainder]\n",
+    "\n",
+    "                # Increment the value in prefix_map\n",
+    "                prefix_map[curr_remainder] += 1\n",
+    "            \n",
+    "            # Add curr_remainder to prefix_map\n",
+    "            else:\n",
+    "                prefix_map[curr_remainder] = 1\n",
+    "\n",
+    "        return count"
    ]
   }
  ],
