continuous subarray sum

--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -805,12 +805,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "13bbc20c",
+   "metadata": {},
+   "source": [
+    "## 📌🔖 Continuous Subarray Sum (LC-523)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8b827264",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def checkSubarraySum(self, nums: List[int], k: int) -> bool:\n",
+    "        # Initialise the variables \n",
+    "        prefix_map = {0: -1}\n",
+    "        current_sum = 0\n",
+    "\n",
+    "        # Start the loop over nums \n",
+    "        for i, num in enumerate(nums):\n",
+    "            # Calculate the current sum \n",
+    "            current_sum += num\n",
+    "\n",
+    "            # Check for the condition \n",
+    "            current_remainder = current_sum % k\n",
+    "            if current_remainder in prefix_map:\n",
+    "                # Check for the length \n",
+    "                sub_array_len = i - prefix_map[current_remainder]\n",
+    "\n",
+    "                if sub_array_len >= 2:\n",
+    "                    return True\n",
+    "            \n",
+    "            else:\n",
+    "                # Save the first appearance\n",
+    "                # Add current remainder in prefix map \n",
+    "                prefix_map[current_remainder] = i\n",
+    "\n",
+    "        return False"
+   ]
   }
  ],
  "metadata": {
