graphs- dfs revision

--- a/revision.ipynb
+++ b/revision.ipynb
@@ -20,21 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2a3c4b45",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from typing import List\n",
     "class Solution:\n",
@@ -95,21 +84,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "8ff89ca6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Solution:\n",
     "    def majorityElement(self, nums: List[int]) -> int: \n",
@@ -146,21 +124,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "99d3bb1d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[3]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Solution:\n",
     "    def majorityElement(self, nums: List[int]) -> List[int]:\n",
@@ -270,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "244e3321",
    "metadata": {},
    "outputs": [],
@@ -355,6 +322,69 @@
     "\n",
     "        return count"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfd89928",
+   "metadata": {},
+   "source": [
+    "## DFS Practice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a25a89c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dfs(graph, visited, node):\n",
+    "    # Check if node is in visited \n",
+    "    if node in visited:\n",
+    "        return \n",
+    "    \n",
+    "    # Print the node \n",
+    "    print(node, end=\" \")\n",
+    "\n",
+    "    # Mark the node as visited \n",
+    "    visited.add(node)\n",
+    "\n",
+    "    # Recursively call the other nodes\n",
+    "    for branch in graph[node]:\n",
+    "        dfs(graph, visited, branch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c56df1d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph = {\n",
+    "    0 : [1,3],\n",
+    "    1 : [0,2],\n",
+    "    2 : [1,3],\n",
+    "    3 : [0,2]\n",
+    "}\n",
+    "\n",
+    "visited = set() \n",
+    "dfs(graph, visited, 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90c293eb",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "067f1bd4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
