revision- graph bfs

--- a/revision.ipynb
+++ b/revision.ipynb
@@ -376,12 +376,74 @@
    "cell_type": "markdown",
    "id": "90c293eb",
    "metadata": {},
-   "source": []
+   "source": [
+    "## BFS Practice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "067f1bd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "def bfs(graph, node):\n",
+    "    # Start the visited set and queue\n",
+    "    queue = deque()\n",
+    "    visited= set()\n",
+    "\n",
+    "    # Add the node to queue and mark it as visited \n",
+    "    queue.append(node)\n",
+    "    visited.add(node)\n",
+    "\n",
+    "    # Start the loop until last element in the queue\n",
+    "    while queue:\n",
+    "        # Fetch the last element from left \n",
+    "        node = queue.popleft()\n",
+    "\n",
+    "        # Print the node\n",
+    "        print(node, end=\" \")\n",
+    "\n",
+    "        # Visit connecting nodes from the node \n",
+    "        for connection in graph[node]:\n",
+    "            if connection not in visited:\n",
+    "                # Add the connection to visited and mark it as visited \n",
+    "                queue.append(connection)\n",
+    "                visited.add(connection)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "de734c57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 3 2 "
+     ]
+    }
+   ],
+   "source": [
+    "graph = {\n",
+    "    0 : [1,3],\n",
+    "    1 : [0,2],\n",
+    "    2 : [1,3],\n",
+    "    3 : [0,2]\n",
+    "}\n",
+    "\n",
+    "visited = set() \n",
+    "bfs(graph, 0)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "067f1bd4",
+   "id": "12de1d22",
    "metadata": {},
    "outputs": [],
    "source": []
