revision- graph number of islands

--- a/revision.ipynb
+++ b/revision.ipynb
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "067f1bd4",
    "metadata": {},
    "outputs": [],
@@ -416,18 +416,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "de734c57",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 1 3 2 "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "graph = {\n",
     "    0 : [1,3],\n",
@@ -441,9 +433,96 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6a1eab69",
+   "metadata": {},
+   "source": [
+    "## Number of Islands"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "12de1d22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def numIslands(self, grid: List[List[str]]) -> int:\n",
+    "        # Define a function for traversing using DFS \n",
+    "        def dfs(row, column):\n",
+    "            # Check for boundary conditions \n",
+    "            if not (0 <= row < len(grid) and 0 <= column < len(grid[0])):\n",
+    "                return\n",
+    "\n",
+    "            # Check the value\n",
+    "            if grid[row][column] == \"0\":\n",
+    "                return\n",
+    "            \n",
+    "            # Mark current value as visited by marking it as \"0\"\n",
+    "            grid[row][column] = \"0\"\n",
+    "\n",
+    "            # Traverse to nearby \n",
+    "            dfs(row-1, column)\n",
+    "            dfs(row+1, column)\n",
+    "            dfs(row, column-1)\n",
+    "            dfs(row, column+1)\n",
+    "\n",
+    "\n",
+    "        # Loop through each item in matrix and start the counter for islands\n",
+    "        islands = 0 \n",
+    "\n",
+    "        for row in range(len(grid)):\n",
+    "            for column in range(len(grid[0])):\n",
+    "                # Fetch the value \n",
+    "                value = grid[row][column]\n",
+    "\n",
+    "                # Check if value represents land or water \n",
+    "                if value == '1':\n",
+    "                    # Increment the counter of islands \n",
+    "                    islands += 1\n",
+    "\n",
+    "                    # Call dfs to traverse these islands \n",
+    "                    dfs(row, column)\n",
+    "        \n",
+    "        return islands"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b187c56a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid = [\n",
+    "  [\"1\",\"1\",\"0\",\"0\",\"0\"],\n",
+    "  [\"1\",\"1\",\"0\",\"0\",\"0\"],\n",
+    "  [\"0\",\"0\",\"1\",\"0\",\"0\"],\n",
+    "  [\"0\",\"0\",\"0\",\"1\",\"1\"]\n",
+    "]\n",
+    "\n",
+    "sol = Solution()\n",
+    "sol.numIslands(grid= grid)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12de1d22",
+   "id": "cb5aad9c",
    "metadata": {},
    "outputs": [],
    "source": []
