--- a/revision.ipynb
+++ b/revision.ipynb
@@ -520,12 +520,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c9ed7f8b",
+   "metadata": {},
+   "source": [
+    "## Number of Islands Using BFS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "cb5aad9c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from typing import List\n",
+    "from collections import deque\n",
+    "\n",
+    "class Solution:\n",
+    "    def numIslands(self, grid: List[List[str]]) -> int:\n",
+    "        # BFS function for traversal\n",
+    "        def bfs(row, column):\n",
+    "            # Start the queue \n",
+    "            queue = deque()\n",
+    "\n",
+    "            # Add current element in the queue and mark it as visited \n",
+    "            queue.append((row, column))\n",
+    "            grid[row][column] = \"0\"\n",
+    "            \n",
+    "            # Start the loop to pick left items from queue \n",
+    "            while queue:\n",
+    "                # Pop the left most item \n",
+    "                row, column = queue.popleft()\n",
+    "                \n",
+    "                # Check for its values if \"0\"\n",
+    "                if grid[row][column] is \"0\":\n",
+    "                    return\n",
+    "                \n",
+    "                # \n",
+    "\n",
+    "        # Loop through each item in matrix and start the counter for islands\n",
+    "        islands = 0 \n",
+    "\n",
+    "        for row in range(len(grid)):\n",
+    "            for column in range(len(grid[0])):\n",
+    "                # Fetch the value \n",
+    "                value = grid[row][column]\n",
+    "\n",
+    "                # Check if value represents land or water \n",
+    "                if value == '1':\n",
+    "                    # Increment the counter of islands \n",
+    "                    islands += 1\n",
+    "\n",
+    "                    # Call dfs to traverse these islands \n",
+    "                    bfs(row, column)\n",
+    "        \n",
+    "        return islands"
+   ]
   }
  ],
  "metadata": {
